--- a/src/components/layout/StayAheadInJobHunt/style.module.css
+++ b/src/components/layout/StayAheadInJobHunt/style.module.css
@@ -14,15 +14,22 @@
   flex-direction: column;
 }
 .sectionContent h3 {
-  font-size: clamp(28px, 3vw, 40px);
+  font-size: clamp(28px, 4vw, 40px);
+  padding: 0px 20px;
+  text-align: center;
   color: #ffffff;
   font-family: Poppins;
   font-weight: 700;
   font-style: Bold;
-  font-size: 40px;
   line-height: clamp(32px, 5vw, 36.4px);
   letter-spacing: 0%;
   vertical-align: middle;
   text-transform: capitalize;
   text-shadow: 2px 2px 6px #00000040, 0 4px 10px #00000026;
+}
+
+@media (max-width: 768px) {
+  .stayAheadInJobHuntContainer {
+    padding: 45px 0px;
+  }
 }
