--- a/src/app/(public)/(home)/_components/featuredJobs/style.module.css
+++ b/src/app/(public)/(home)/_components/featuredJobs/style.module.css
@@ -14,6 +14,15 @@
   text-transform: capitalize;
   text-align: center;
 }
-.slides {
-  width: 95%;
+.slidesDisplay {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .slidesDisplay {
+    display: block;
+  }
+  .gridDisplay {
+    display: none;
+  }
 }
