--- a/src/components/common/EmployeeLogo/style.module.css
+++ b/src/components/common/EmployeeLogo/style.module.css
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  object-position: left;
 }
 
 .employeeLogo:hover {
@@ -20,4 +21,14 @@
   transform: scale(1.05);
   cursor: text;
   filter: drop-shadow(0 12px 40px #0e37b1);
+}
+@media (max-width: 768px) {
+  .employeeLogo {
+    width: 150px;
+  }
+}
+@media (max-width: 576px) {
+  .employeeLogo {
+    width: 130px;
+  }
 }
