--- a/src/components/common/FeaturedJobBox/style.module.css
+++ b/src/components/common/FeaturedJobBox/style.module.css
@@ -36,7 +36,9 @@
 }
 
 .featuredJobBox {
-  box-shadow: 0px 4px 29.9px 0px #0000001a;
+  /* box-shadow: 0px 4px 29.9px 0px #0000001a; */
+  box-shadow: 0px 3.67px 27.41px 0px #0000001a;
+
   background: #ffffff;
   border-radius: 30px;
   height: 100%;
@@ -44,10 +46,10 @@
   padding: 14px 15px;
   transition: all ease-in-out 0.3s;
 }
-.featuredJobBox:hover {
+/* .featuredJobBox:hover {
   transform: scale(1.02);
   box-shadow: 0 12px 40px rgba(14, 56, 177, 0.25);
-}
+} */
 .featuredJobBox h3 {
   font-family: Poppins;
   font-weight: 700;
