--- a/src/components/ui/StayAheadSubscribeInput/style.module.css
+++ b/src/components/ui/StayAheadSubscribeInput/style.module.css
@@ -6,6 +6,9 @@
   border-radius: 46px;
   padding: 0px 30px;
   padding-right: 12px;
+  display: flex;
+  gap: 20px;
+  width: 100%;
 }
 .subscribeInputBox:hover {
   box-shadow: 0 12px 40px #0e37b18a;
@@ -32,6 +35,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  width: max-content;
   color: #ffffff;
   padding: 12px;
   transition: all ease-in-out 0.3s;
