--- a/src/components/common/CarrerResourceBox/style.module.css
+++ b/src/components/common/CarrerResourceBox/style.module.css
@@ -10,7 +10,7 @@
 }
 .card:hover {
   box-shadow: 0px 1.06px 26.44px 0px #0e37b15d;
-  /* transform: scale(1.01); */
+  transform: scale(1.01);
 }
 .card:hover .imageWrapper img {
   transform: scale(1.03);
@@ -79,7 +79,7 @@
   font-family: Poppins;
   font-weight: 700;
   font-style: Bold;
-  font-size: clamp(14px, 3vw, 26px);
+  font-size: clamp(14px, 4vw, 26px);
   line-height: clamp(20px, 5vw, 38px);
   letter-spacing: 0%;
   color: #0e0e0e;
@@ -92,7 +92,7 @@
   font-family: Poppins;
   font-weight: 400;
   font-style: Regular;
-  font-size: 16px;
+  font-size: clamp(14px, 2.5vw, 16px);
   line-height: 24px;
   letter-spacing: 0%;
   text-decoration: none;
