--- a/src/components/ui/button/style.module.css
+++ b/src/components/ui/button/style.module.css
@@ -88,7 +88,8 @@
   }
   .roundBtn {
     min-width: auto;
-    padding: 6px;
+    padding: 8px;
+    padding-left: 16px;
   }
   .btnText {
     font-size: 14px;
