--- a/src/components/common/FeaturedJobBox/style.module.css
+++ b/src/components/common/FeaturedJobBox/style.module.css
@@ -36,20 +36,20 @@
 }
 
 .featuredJobBox {
-  /* box-shadow: 0px 4px 29.9px 0px #0000001a; */
   box-shadow: 0px 3.67px 27.41px 0px #0000001a;
-
   background: #ffffff;
   border-radius: 30px;
   height: 100%;
   width: 100%;
   padding: 14px 15px;
   transition: all ease-in-out 0.3s;
+  will-change: transform;
+  transform: translateZ(0);
 }
-/* .featuredJobBox:hover {
-  transform: scale(1.02);
-  box-shadow: 0 12px 40px rgba(14, 56, 177, 0.25);
-} */
+.featuredJobBox:hover {
+  transform: scale(1.01);
+  box-shadow: 0 12px 20px rgba(14, 56, 177, 0.25);
+}
 .featuredJobBox h3 {
   font-family: Poppins;
   font-weight: 700;
@@ -58,6 +58,7 @@
   line-height: 28.6px;
   letter-spacing: 0%;
   vertical-align: middle;
+  transition: all ease-in-out 0.3s;
 }
 .sectionContent {
   display: flex;
@@ -73,6 +74,7 @@
   letter-spacing: 0%;
   vertical-align: middle;
   color: #949494;
+  transition: all ease-in-out 0.3s;
 }
 .sectionContent h4 {
   font-family: Poppins;
@@ -83,6 +85,7 @@
   letter-spacing: 0%;
   vertical-align: middle;
   color: #1e2d42;
+  transition: all ease-in-out 0.3s;
 }
 .sectionContent strong {
   font-family: Poppins;
