--- a/src/components/common/herosectionbanner/style.module.css
+++ b/src/components/common/herosectionbanner/style.module.css
@@ -87,6 +87,7 @@
   height: 257px;
   width: 154px;
   right: 0px;
+  aspect-ratio: 1.13;
   top: -25px;
 }
 .bannerWrapperGrid > div:nth-child(2) {
@@ -103,6 +104,7 @@
   height: 173px;
   width: 183px;
   right: -20px;
+  aspect-ratio: 1.13;
   bottom: -30px;
 }
 /* Row 2 */
@@ -120,6 +122,7 @@
 .bannerWrapperGrid > div:nth-child(3) > .bannnerBoxImage > div {
   height: 142px;
   width: 170px;
+  aspect-ratio: 1.13;
   top: -1px;
   right: 0px;
   bottom: -30px;
@@ -142,6 +145,7 @@
 .bannerWrapperGrid > div:nth-child(4) > .bannnerBoxImage > div {
   height: 168px;
   width: 153px;
+  aspect-ratio: 1.13;
   top: -1px;
   right: 0px;
   bottom: -30px;
@@ -246,6 +250,7 @@
   .bannerWrapperGrid > div:nth-child(1) > .bannnerBoxImage > div {
     height: 175px;
     width: 120px;
+    aspect-ratio: 1.13;
     top: -8px;
   }
 
