--- a/src/components/ui/button/style.module.css
+++ b/src/components/ui/button/style.module.css
@@ -45,8 +45,9 @@
   justify-content: center;
   flex: 1;
   align-items: center;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 400;
+  /* font-family: "DM Sans", sans-serif; */
+  font-family: Poppins;
+  font-weight: 500;
   font-size: 16px;
   white-space: nowrap;
   text-transform: capitalize;
