--- a/src/components/common/CarrerResourceBox/style.module.css
+++ b/src/components/common/CarrerResourceBox/style.module.css
@@ -22,58 +22,24 @@
   transition: all 0.3s ease-in-out;
 }
 
-.dateBadge {
-  position: absolute;
-  z-index: 10;
-  bottom: 0%;
-  transform: translateY(50%);
-  left: 10%;
-  border-radius: 12px;
-  overflow: hidden;
-}
-
-.date {
-  font-family: Poppins;
-  font-weight: 700;
-  font-style: Bold;
-  font-size: 12px;
-  padding: 0px 12px;
-  padding-top: 15px;
-  padding-bottom: 2px;
-  letter-spacing: 0%;
-  text-align: center;
-  vertical-align: middle;
-  background-color: #fdf2e7;
-  text-transform: uppercase;
-  line-height: 16px;
-}
-.date span:nth-child(1) {
-  font-size: 24px;
-}
-
-.year {
-  background-color: #1b3c53;
-  font-family: Poppins;
-  font-weight: 500;
-  font-style: Bold;
-  font-size: 12px;
-  text-align: center;
-  color: #fdf2e7;
-  padding: 2px;
-}
-
 .imageWrapper img {
   object-fit: cover;
   object-position: center;
   transition: all 0.3s ease-in-out;
 }
 .sectionContent {
-  padding: 20px;
-  padding-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.badgePadding {
+  padding: 20px;
+  padding-top: 60px;
   gap: 30px;
+}
+.profilePadding {
+  padding: 20px;
+  gap: 15px;
 }
 .sectionContent h3 {
   font-family: Poppins;
