resource page completed needs minor changes only

--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -77,7 +77,8 @@
 }
 .StayAheadInJobHuntWrapper {
   position: relative;
-  height: 219px;
+  height: 150px;
+  top: -30px;
 }
 .socialFollowWrapper {
   display: flex;
