working on pricing page now

--- a/src/app/(public)/jobs/_components/jobDetailLayout/CompanyHeader/style.module.css
+++ b/src/app/(public)/jobs/_components/jobDetailLayout/CompanyHeader/style.module.css
@@ -15,19 +15,31 @@
   object-fit: contain;
   object-position: center;
 }
+.sectionContent p {
+  margin-bottom: 0px !important;
+}
 .sectionContent p:nth-child(1) {
   font-family: Poppins;
   font-weight: 700;
   font-style: normal;
-  font-size: clamp(18px, 1.8vw, 24px);
-  line-height: clamp(22px, 2vw, 28.6px);
+  font-size: clamp(15px, 1.8vw, 24px);
+  line-height: clamp(16px, 2vw, 28.6px);
   letter-spacing: 0%;
   vertical-align: middle;
   color: #0e0e0e;
   text-transform: capitalize;
-  margin-bottom: 10px;
+  margin-bottom: 10px !important;
 }
-
+.jobTopDetailsHeading {
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  justify-self: center;
+}
+.jobMetaULDiv {
+  height: 100%;
+  /* border: 1px solid green; */
+}
 .sectionContent p:nth-child(2) {
   font-family: Poppins;
   font-weight: 500;
@@ -48,7 +60,7 @@
 }
 
 .sectionContent li span {
-  font-family: Poppins;
+  font-family: "Poppins";
   font-weight: 500;
   font-style: normal;
   font-size: clamp(12px, 1.4vw, 14px);
@@ -58,10 +70,15 @@
   color: #949494;
 }
 .jobMeta {
-  padding-top: 10px;
+  /* padding-top: 10px; */
+  gap: clamp(1px, 1vw, 20px);
+}
+.jobMeta li {
+  width: 100%;
+  flex: 1;
 }
 .jobMeta li label {
-  font-family: Poppins;
+  font-family: "Poppins";
   font-weight: 400;
   font-style: Regular;
   font-size: clamp(12px, 1.4vw, 14px);
@@ -74,26 +91,50 @@
   font-family: Poppins;
   font-weight: 400;
   font-style: normal;
-  font-size: clamp(12px, 1.4vw, 14px); /* Desktop: 14px */
+  font-size: clamp(12px, 1.4vw, 14px);
   line-height: clamp(14px, 1.6vw, 16px);
   letter-spacing: 0%;
   vertical-align: middle;
   color: #000000;
   padding: 0.3rem 1rem;
+  text-align: center;
   background: #9ac1f9;
+  width: 100%;
   border-radius: 5px;
 }
 
 @media (max-width: 576px) {
+  .jobHeader > div:nth-child(1) {
+    padding: 10px;
+  }
   .jobCard {
     height: auto;
     gap: 1.5rem;
   }
-  .jobInfoAction,
-  .jobTopDetailsHeading {
+  .jobMeta {
+    display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: flex-start;
-    gap: 1rem;
+    justify-content: flex-start;
+    height: 100%;
+  }
+  .jobMeta li span {
+    padding: 2px 0.5rem;
+  }
+}
+@media (max-width: 490px) {
+  .companyLogo {
+    width: 35px;
+    height: 35px;
+  }
+  .jobMeta {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 100%;
+  }
+  .jobMeta li span {
+    padding: 2px 0.5rem;
   }
 }
