--- a/src/components/common/heroSection/style.module.css
+++ b/src/components/common/heroSection/style.module.css
@@ -2,6 +2,9 @@
   background: linear-gradient(238.2deg, #9bc9ff 8.27%, #4e96ea 96%);
   position: relative;
 }
+.heroContent {
+  z-index: 2;
+}
 .searchBox {
   position: relative;
   max-width: 760px;
@@ -23,7 +26,9 @@
 .sectionContent h1 {
   color: #ffffff;
   font-family: Poppins;
-  font-weight: 700;
+  font-weight: 500;
+  text-align: center;
+  font-size: clamp(28px, 5vw, 52px);
 }
 .heroSectionContent {
   display: flex;
@@ -33,12 +38,13 @@
   justify-content: center;
   height: 100%;
   padding-top: 52px;
-  padding-bottom: 95px;
+  padding-bottom: 52px;
 }
-
+.sBHeight {
+  padding-bottom: 97px;
+}
 @media (max-width: 576px) {
-  .heroSectionContent {
-    /* padding-top: 32px; */
+  .sBHeight {
     padding-bottom: 120px;
   }
 }
