--- a/src/app/(public)/jobs/_components/jobDetailLayout/JobDescription/style.module.css
+++ b/src/app/(public)/jobs/_components/jobDetailLayout/JobDescription/style.module.css
@@ -1,31 +1,36 @@
-.sectionContent h3 {
+.sectionContentH3 {
   font-family: Poppins;
   font-weight: 600;
   font-style: SemiBold;
-  font-size: 28px;
-  line-height: 28.6px;
+  font-size: clamp(20px, 2vw, 28px) !important;
+  line-height: 28.6px !important;
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-bottom: 20px;
+  margin-bottom: clamp(10px, 2vw, 20px) !important;
 }
 
-.sectionContent h4 {
+.sectionContent h1,
+.sectionContent h2,
+.sectionContent h3,
+.sectionContent h4,
+.sectionContent h5,
+.sectionContent h6 {
   font-family: Poppins;
   font-weight: 700;
   font-style: Bold;
-  font-size: 18px;
-  line-height: 28px;
+  font-size: clamp(14px, 2vw, 18px);
+  line-height: clamp(20px, 2vw, 28px);
   letter-spacing: 0%;
   margin-bottom: 3px;
 }
 
-.sectionContent > p,
+.sectionContent p,
 .sectionContent ul {
   font-family: Poppins;
   font-weight: 400;
   font-style: Regular;
-  font-size: 18px;
-  line-height: 28px;
+  font-size: clamp(14px, 2vw, 18px);
+  line-height: clamp(22px, 2vw, 28px);
   letter-spacing: 0%;
   margin-bottom: 20px;
   color: #000000;
