--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,7 +84,7 @@ button {
   letter-spacing: 0%;
   vertical-align: middle;
   text-transform: capitalize;
-  text-align: center;
+  /* text-align: center; */
   margin-bottom: clamp(1rem, 2.5vw, 25px);
 }
 .section-content span {
@@ -119,7 +119,11 @@ button {
 }
 
 .drawerZ {
-  z-index: 11000000;
+  z-index: 11000000 !important;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: red;
 }
 /* --------------------- select box css --------------- */
 .selectBoxCSS .react-select__control {
@@ -128,27 +132,35 @@ button {
   min-height: 40px;
   box-shadow: none;
   font-weight: 400;
-  font-size: 16px;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   line-height: 24px;
   letter-spacing: 0%;
   vertical-align: middle;
-  padding: 2px 10px;
 }
 
 .selectBoxCSS .react-select__placeholder,
 .selectBoxCSS .react-select__single-value {
   font-weight: 400;
-  font-size: 16px;
+  font-size: clamp(14px, 2vw, 16px);
+  text-align: center;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   line-height: 24px;
   letter-spacing: 0%;
   color: var(--primary-color);
 }
-/* Swiper Custom Styles Scoped under .swiperCSS */
 
+@media (max-width: 576px) {
+  .selectBoxCSS .react-select__control {
+    padding: 2px;
+  }
+
+  .selectBoxCSS .react-select__control {
+    padding: 2px 6px;
+  }
+}
+/* Swiper Custom Styles Scoped under .swiperCSS */
 .swiperCSS {
   position: relative;
   padding-bottom: 50px !important;
