--- a/src/components/ui/spinner/loader/style.module.css
+++ b/src/components/ui/spinner/loader/style.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   margin-top: 100px;
   animation: danceMove 2s infinite ease-in-out;
+  margin-bottom: 50px;
 }
 
 /* Head */
@@ -12,6 +13,7 @@
   height: 40px;
   background-color: #0070f3;
   border-radius: 50%;
+  box-shadow: var(--box-shadow);
 }
 
 /* Body */
@@ -20,6 +22,7 @@
   height: 60px;
   background-color: #0070f3;
   margin-top: 4px;
+  box-shadow: var(--box-shadow);
 }
 
 /* Arms */
