--- a/src/components/ui/Pagination/style.module.css
+++ b/src/components/ui/Pagination/style.module.css
@@ -3,13 +3,11 @@
   align-items: center;
   gap: 10px;
 }
-.paginationContainerWrapper a:nth-child(1) {
-  margin-right: 15px;
-}
 .paginationContainer {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  text-align: center;
   gap: 12px;
   font-family: sans-serif;
 }
