--- a/src/components/common/SearchBox/style.module.css
+++ b/src/components/common/SearchBox/style.module.css
@@ -1,19 +1,20 @@
 .searchBoxContainer {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   border: 1px solid var(--primary-color);
-  padding: 15px;
   border-radius: 50px;
   box-shadow: 0px 13px 30px 0px #0000001a;
+  padding: 15px;
+  position: relative;
 }
+
 .searchBoxContainer:hover {
   box-shadow: 0 12px 40px #0e37b18a;
 }
+
 .inputContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: stretch;
   gap: 10px;
   flex: 1;
 }
@@ -21,12 +22,17 @@
   flex: 1;
   font-size: clamp(16px 4vw, 18px);
 }
+.searchBoxInputWrapper > div {
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+}
 .searchBoxInputWrapper input {
   font-family: Poppins;
-  height: 100%;
   outline: none;
   width: 100%;
   padding: 0px 20px;
+  flex: 1;
   border: none;
   color: var(--secondary-color);
 }
@@ -35,8 +41,8 @@
 }
 .filteredDropDown {
   position: absolute;
+  z-index: 50;
   top: 150%;
-  z-index: 10;
   border: 1px solid var(--primary-color);
   background-color: #ffffff;
   border-radius: 12px;
@@ -97,4 +103,9 @@
     width: 100%;
     padding: 10px 8px;
   }
+}
+.activeSuggestion {
+  background-color: #eee;
+  font-weight: bold;
+  cursor: pointer;
 }
