--- a/src/components/common/heroSection/style.module.css
+++ b/src/components/common/heroSection/style.module.css
@@ -1,9 +1,7 @@
 .heroSectionContainer {
   background: linear-gradient(238.2deg, #9bc9ff 8.27%, #4e96ea 96%);
   position: relative;
-}
-.heroContent {
-  z-index: 2;
+  margin-bottom: 50px;
 }
 .searchBox {
   position: relative;
@@ -12,15 +10,12 @@
   box-shadow: 0px 13px 30px 0px #0000001a;
 }
 .searchBoxContainer {
-  position: absolute;
-  width: 100%;
-  bottom: 0%;
-  left: 50%;
-  transform: translate(-50%, 50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  margin-top: -90px;
+  position: relative;
+  z-index: 2;
 }
 
 .sectionContent h1 {
@@ -41,10 +36,13 @@
   padding-bottom: 52px;
 }
 .sBHeight {
-  padding-bottom: 97px;
+  padding-bottom: 72px;
 }
 @media (max-width: 576px) {
   .sBHeight {
-    padding-bottom: 120px;
+    padding-bottom: 150px;
+  }
+  .searchBoxContainer {
+    margin-top: -150px;
   }
 }
