--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,9 +34,13 @@ p {
   }
 } */
 * {
-  /* margin: 0; */
-  /* padding: 0; */
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+input {
+  margin: 0;
+  padding: 0;
 }
 
 html {
