--- a/src/components/layout/dashboardClient/style.module.css
+++ b/src/components/layout/dashboardClient/style.module.css
@@ -1,6 +1,9 @@
 .dashboard {
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100%;
+  height: 100vh;
+  border: 1px solid red;
   background: hsl(220, 15%, 97%);
 }
 
