education and work experience page ready

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 
   /* ---------------- main color ------------- */
   --primary-color: #4679b5;
+  --primary-color-dark: #3b5a8c;
   --secondary-color: #1e2d42;
 
   --light-black: #262626;
