--- a/src/components/layout/dashboardClient/style.module.css
+++ b/src/components/layout/dashboardClient/style.module.css
@@ -3,13 +3,12 @@
   height: 100vh;
   width: 100%;
   height: 100vh;
-  border: 1px solid red;
   background: hsl(220, 15%, 97%);
 }
 
 /* Sidebar (shared) */
 .sidebar {
-  width: 280px;
+  width: 20%;
   background: #fff;
   border-right: 1px solid hsl(220, 13%, 91%);
   flex-shrink: 0;
@@ -83,7 +82,8 @@
 
 /* Main */
 .mainContent {
-  flex: 1;
+  /* flex: 1; */
+  width: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -149,7 +149,7 @@
 
 /* Content */
 .content {
-  flex: 1;
+  /* flex: 1; */
   padding: 2rem;
   overflow-y: auto;
 }
@@ -175,8 +175,14 @@
   .headerNav {
     display: none;
   }
+  .sidebar{
+    width: 50%;
+  }
   .sidebarDesktop {
     display: none;
+  }
+  .mainContent{
+    width: 100%;
   }
   .mobileMenuButton {
     display: block;
